--- a/Kyle.css
+++ b/Kyle.css
@@ -2,23 +2,26 @@ ul.menu {
     list-style:none;
     margin: 0;
     padding: 0;
-    background: orange;
+    background: e8e7df;
     opacity: 0.5;
     overflow: hidden;
     width: 100%;
     }
 li.menu {
     float: left;
+    width: 20%;
     }
 a.menu {
     text-decoration:none;
     display:block;
-    padding:12px;
+    padding: 0;
     background: pink;
     color: purple;
+    font-family: 'Courier New', Courier, monospace;
+    height: 100%;
     }
 a.menu:hover {
-    background: orange;
+    background: rgb(170, 108, 170);
     }
 .banner {
     background-image: url('images/Skrat.png');
@@ -38,25 +41,27 @@ a.menu:hover {
     background-color: rgb(63, 11, 63);
 }
 #container {
-    width:85%;
+    width:80%;
     height:100%;
     margin:auto;
+    border-color: red;
+    border-style: dashed;
 }
 #block1 {
     background-color: rgb(174, 174, 174);
     width:100%;
-    height:200px;
+    height:27%;
     float: right;
 }
 #block2 {
     background-color: #e8e7df;
     width:100%;
-    height:65px;
+    height:8%;
     float: right;
 }
 #block3 {
     background-color: rgb(199, 62, 199);
     width:100%;
-    height:1260px;
-    float:none;
+    height:65%;
+    float:right;
 }
