--- a/Kyle.css
+++ b/Kyle.css
@@ -35,33 +35,8 @@ a.menu:hover {
     font-weight: bold;
 }
 .rfont {
-    font-family: 'Courier New', Courier, monospace;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-#background {   
+#background {
     background-color: rgb(63, 11, 63);
-}
-#container {
-    width:80%;
-    height:100%;
-    margin:auto;
-    border-color: red;
-    border-style: dashed;
-}
-#block1 {
-    background-color: rgb(174, 174, 174);
-    width:100%;
-    height:27%;
-    float: right;
-}
-#block2 {
-    background-color: #e8e7df;
-    width:100%;
-    height:8%;
-    float: right;
-}
-#block3 {
-    background-color: rgb(199, 62, 199);
-    width:100%;
-    height:65%;
-    float:right;
 }
